--- a/src/manifest.json
+++ b/src/manifest.json
@@ -5,7 +5,8 @@
 	"versionName": "1.0.0",
 	"versionCode": "100",
 	"transformPx": false,
-	"app-plus": { /* 5+App特有相关 */
+	"app-plus": { 
+		"desc": "/* 5+App特有相关 */",
 		"usingComponents": true,
 		"splashscreen": {
 			"alwaysShowBeforeRender": true,
@@ -13,11 +14,14 @@
 			"autoclose": true,
 			"delay": 0
 		},
-		"modules": { /* 模块配置 */
+		"modules": { 
+			"desc": "/* 模块配置 */"
 
 		},
-		"distribute": { /* 应用发布信息 */
-			"android": { /* android打包配置 */
+		"distribute": { 
+			"desc": "/* 应用发布信息 */",
+			"android": { 
+				"desc": "/* android打包配置 */",
 				"permissions": ["<uses-permission android:name=\"android.permission.CHANGE_NETWORK_STATE\"/>",
 					"<uses-permission android:name=\"android.permission.MOUNT_UNMOUNT_FILESYSTEMS\"/>",
 					"<uses-permission android:name=\"android.permission.READ_CONTACTS\"/>",
@@ -42,18 +46,19 @@
 					"<uses-permission android:name=\"android.permission.WRITE_SETTINGS\"/>"
 				]
 			},
-			"ios": { /* ios打包配置 */
-
+			"ios": { 
+				"desc": "/* ios打包配置 */"
 			},
-			"sdkConfigs": { /* SDK配置 */
-
+			"sdkConfigs": { 
+				"desc": "/* SDK配置 */"
 			}
 		}
 	},
-	"quickapp": { /* 快应用特有相关 */
-
+	"quickapp": { 
+		"desc": "/* 快应用特有相关 */"
 	},
-	"mp-weixin": { /* 微信小程序特有相关 */
+	"mp-weixin": { 
+		"desc": "/* 微信小程序特有相关 */",
 		"appid": "",
 		"setting": {
 			"urlCheck": false
