--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,6 @@
 {
-  "compilerOptions": {
-    "types": [
-      "@dcloudio/types",
-      "miniprogram-api-typings",
-      "mini-types"
-    ]
-  }
+	"compilerOptions": {
+		"types": ["@dcloudio/types", "miniprogram-api-typings", "mini-types"]
+  },
+  "files": ["config.ts"]
 }
